--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </img>
 
                 <div class="ms-3 centrarBoton">
-                    <h2>Athletic Club bARCA</h2>
+                    <h2>Athletic Club</h2>
                     <a class="btn btn-secondary bg-success " href="athleticClub.html">Ver plantilla</a>
                 </div>
             </div><!-- /.col-lg-3 -->
