--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Alaves</h2>
-                    <p><a class="btn btn-secondary bg-success" href="alaves.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/alaves/alaves.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -59,7 +59,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Almeria</h2>
-                    <p><a class="btn btn-secondary bg-success" href="almeria.html" target="_blank">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/almeria/almeria.html" target="_blank">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -68,7 +68,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Athletic Club</h2>
-                    <a class="btn btn-secondary bg-success " href="athleticClub.html">Ver plantilla</a>
+                    <a class="btn btn-secondary bg-success " href="equipos/athleticClub/athleticClub.html">Ver plantilla</a>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -77,7 +77,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Atletico de Madrid</h2>
-                    <p><a class="btn btn-secondary bg-success" href="atleticoDeMadrid.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/atleticoDeMadrid/atleticoDeMadrid.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
@@ -109,7 +109,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>FC Barcelona</h2>
-                    <p><a class="btn btn-secondary bg-success" href="barcelona.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/barcelona/barcelona.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -118,7 +118,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Betis</h2>
-                    <p><a class="btn btn-secondary bg-success" href="betis.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/betis/betis.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -127,7 +127,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Cadiz</h2>
-                    <p><a class="btn btn-secondary bg-success" href="cadiz.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/cadiz/cadiz.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -136,7 +136,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Celta de Vigo</h2>
-                    <p><a class="btn btn-secondary bg-success" href="celtaDeVigo.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/celtaDeVigo/celtaDeVigo.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
@@ -160,7 +160,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Getafe</h2>
-                    <p><a class="btn btn-secondary bg-success" href="getafe.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/getafe/getafe.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -169,7 +169,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Girona</h2>
-                    <p><a class="btn btn-secondary bg-success" href="girona.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/girona/girona.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -178,7 +178,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Granada</h2>
-                    <p><a class="btn btn-secondary bg-success" href="granada.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/granada/granada.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -187,7 +187,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Las Palmas</h2>
-                    <p><a class="btn btn-secondary bg-success" href="lasPalmas.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/lasPalmas/lasPalmas.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
@@ -214,7 +214,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Malloca</h2>
-                    <p><a class="btn btn-secondary bg-success" href="mallorca.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/mallorca/mallorca.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -223,7 +223,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Osasuna</h2>
-                    <p><a class="btn btn-secondary bg-success" href="osasuna.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/osasuna/osasuna.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -232,7 +232,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Rayo Vallecano</h2>
-                    <p><a class="btn btn-secondary bg-success" href="rayo.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/rayo/rayo.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -241,7 +241,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Real Madrid</h2>
-                    <p><a class="btn btn-secondary bg-success" href="realMadrid.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/realMadrid/realMadrid.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
@@ -268,7 +268,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Real Sociedad</h2>
-                    <p><a class="btn btn-secondary bg-success" href="realSociedad.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/realSociedad/realSociedad.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -277,7 +277,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Sevilla</h2>
-                    <p><a class="btn btn-secondary bg-success" href="sevilla.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/sevilla/sevilla.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -286,7 +286,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Valencia</h2>
-                    <p><a class="btn btn-secondary bg-success" href="valencia.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/valencia/valencia.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
             <div class="col-lg-3 centrar">
@@ -296,7 +296,7 @@
 
                 <div class="ms-3 centrarBoton">
                     <h2>Villareal</h2>
-                    <p><a class="btn btn-secondary bg-success" href="villareal.html">Ver plantilla</a></p>
+                    <p><a class="btn btn-secondary bg-success" href="equipos/villareal/villareal.html">Ver plantilla</a></p>
                 </div>
             </div><!-- /.col-lg-3 -->
         </div><!-- /.row -->
