--- a/equipos/alaves/alaves.html
+++ b/equipos/alaves/alaves.html
@@ -32,9 +32,6 @@
                         <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="entrenador.html">Entrenador</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -53,7 +50,62 @@
             </div>
         </div>
     </nav>
-    
+
+
+    <div class="container marketing">
+
+        <!-- ENTRENADOR -->
+        <h1 class="mt-5">ENTRENADOR</h1>
+        <hr>
+        <div class="row mt-5 d-flex justify-content-center">
+
+            <div class="col-lg-4 text-center">
+                <img class="rounded-circle" width="140" height="140">
+                </img>
+
+                <h2>Luis Garcia Plaza</h2>
+                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
+                    column.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+
+        </div><!-- /.row -->
+
+
+        <!-- PORTEROS -->
+
+        <h1 class="mt-5">PORTEROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center">
+            <div class="col-lg-4 ">
+                <img class="rounded-circle" width="140" height="140">
+                </img>
+
+                <h2>Heading</h2>
+                <p>Some representative placeholder content for the three columns of text below the carousel. This is the
+                    first column.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140">
+                </img>
+
+                <h2>Heading</h2>
+                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
+                    column.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+    </div>
+
+
+
+
+
+
 </body>
 
 </html>
