--- a/equipos/alaves/alaves.html
+++ b/equipos/alaves/alaves.html
@@ -52,6 +52,31 @@
     </nav>
 
 
+
+    <!-- AÑADIR JUGADOR -->
+
+
+
+
+
+    <form class="container mt-5">
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Escribe el nombre del Jugador</label>
+            <input type="text" class="form-control" style="width: 250px;">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Escribe la posicion base del jugador</label>
+            <input type="text" class="form-control" style="width: 250px;">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Añadir jugador</button>
+    </form>
+
+
+
+
+    <!-- PLANTILLA -->
+
     <div class="container marketing">
 
         <!-- ENTRENADOR -->
@@ -64,9 +89,8 @@
                 </img>
 
                 <h2>Luis Garcia Plaza</h2>
-                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
-                    column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <h5>Entrenador</h5>
+                <h5><a class="btn btn-secondary bg-primary" href="#">Eliminar entrenador</a></h5>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -80,24 +104,226 @@
 
         <div class="row text-center">
             <div class="col-lg-4 ">
-                <img class="rounded-circle" width="140" height="140">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
                 </img>
 
-                <h2>Heading</h2>
-                <p>Some representative placeholder content for the three columns of text below the carousel. This is the
-                    first column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <h2>Antonio Sivera</h2>
+                <h5>Portero</h5>
+                <h5><a class="btn btn-secondary bg-primary" href="#">Eliminar jugador</a></h5>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
                 </img>
 
-                <h2>Heading</h2>
-                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
-                    column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <h2>Jesús Owono</h2>
+                <h5>Portero</h5>
+                <h5><a class="btn btn-secondary bg-primary" href="#">Eliminar jugador</a></h5>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
+
+
+        <!-- DEFENSAS -->
+
+        <h1 class="mt-5">DEFENSAS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center">
+            <div class="col-lg-4 ">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                </img>
+
+                <h2>Andoni Gorosabel</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                </img>
+
+                <h2>Rubén Duarte</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                </img>
+
+                <h2>Aleksandar Sedlar</h2>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- DEFENSAS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                </img>
+
+                <h2>Nahuel Tenaglia</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                </img>
+
+                <h2>Rafa Marín</h2>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                </img>
+
+                <h2>Joseda Álvarez</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/javiLopez.png">
+                </img>
+
+                <h2>Javi Lopez</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+        </div><!-- /.row -->
+
+
+
+
+        <h1 class="mt-5">MEDIOCENTROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center">
+            <div class="col-lg-4 ">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                </img>
+
+                <h2>Ander Guevara</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                </img>
+
+                <h2>Antonio Blanco</h2>
+                <h5>Mediocentro defensivo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                </img>
+
+                <h2>Ianis Hagi</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- MEDIOCENTROS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                </img>
+
+                <h2>Jon Guridi</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                </img>
+
+                <h2>Carlos Benavídez</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+        </div><!-- /.row -->
+
+
+
+
+
+        <h1 class="mt-5">DELANTEROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center">
+            <div class="col-lg-4 ">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                </img>
+
+                <h2>Luis Rioja</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                </img>
+
+                <h2>Kike García</h2>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                </img>
+
+                <h2>Xeber Alkain</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- DELANTEROS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mt-5 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                </img>
+
+                <h2>Abde Rebbach</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
+                </img>
+
+                <h2>Carlos Vicente</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mt-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
+                </img>
+
+                <h2>Unai Ropero</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+
 
     </div>
 
