--- a/equipos/alaves/alaves.html
+++ b/equipos/alaves/alaves.html
@@ -65,7 +65,11 @@
             <input type="text" class="form-control" style="width: 250px;">
         </div>
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Escribe la posicion base del jugador</label>
+            <label for="exampleInputPassword1" class="form-label">Escribe la posicion del jugador</label>
+            <input type="text" class="form-control" style="width: 250px;">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Escribe la url de la imagen del jugador</label>
             <input type="text" class="form-control" style="width: 250px;">
         </div>
 
@@ -90,7 +94,7 @@
 
                 <h2>Luis Garcia Plaza</h2>
                 <h5>Entrenador</h5>
-                <h5><a class="btn btn-secondary bg-primary" href="#">Eliminar entrenador</a></h5>
+                <h5><a class="btn btn-secondary bg-primary eliminar" href="#">Eliminar entrenador</a></h5>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
