--- a/equipos/alaves/alaves.html
+++ b/equipos/alaves/alaves.html
@@ -21,11 +21,6 @@
             <img src="../../img/alaves.png" alt="" width="40px">
             <h4 class="text-white ms-2 mt-1">Alavés</h4>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
-                aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
@@ -94,7 +89,7 @@
 
                 <h2>Luis Garcia Plaza</h2>
                 <h5>Entrenador</h5>
-                <h5><a class="btn btn-secondary bg-primary eliminarEntrenador" href="#">Eliminar entrenador</a></h5>
+                <button class="btn btn-secondary bg-primary eliminarEntrenador">Eliminar entrenador</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -107,13 +102,13 @@
 
 
         <div class="row text-center">
-            <div class="col-lg-4 ">
+            <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
                 </img>
 
                 <h2>Antonio Sivera</h2>
                 <h5>Portero</h5>
-                <h5><a class="btn btn-secondary bg-primary eliminarPorteros" href="#">Eliminar jugador</a></h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
@@ -121,7 +116,7 @@
 
                 <h2>Jesús Owono</h2>
                 <h5>Portero</h5>
-                <h5><a class="btn btn-secondary bg-primary eliminarPorteros" href="#">Eliminar jugador</a></h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -132,14 +127,14 @@
         <hr class="mb-5">
 
 
-        <div class="row text-center">
-            <div class="col-lg-4 ">
+        <div class="row text-center ">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
                 </img>
 
                 <h2>Andoni Gorosabel</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
@@ -147,7 +142,7 @@
 
                 <h2>Rubén Duarte</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
@@ -155,7 +150,7 @@
 
                 <h2>Aleksandar Sedlar</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -164,41 +159,41 @@
 
 
 
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
                 </img>
 
                 <h2>Nahuel Tenaglia</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
                 </img>
 
                 <h2>Rafa Marín</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
                 <h2>Joseda Álvarez</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
 
 
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/javiLopez.png">
                 </img>
 
                 <h2>Javi Lopez</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -211,29 +206,29 @@
 
 
         <div class="row text-center">
-            <div class="col-lg-4 ">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
                 </img>
 
                 <h2>Ander Guevara</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
                 </img>
 
                 <h2>Antonio Blanco</h2>
                 <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
                 </img>
 
                 <h2>Ianis Hagi</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -242,57 +237,57 @@
 
 
 
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
                 </img>
 
                 <h2>Jon Guridi</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
                 </img>
 
                 <h2>Carlos Benavídez</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
 
 
 
-
+        <!-- DELANTEROS -->
 
         <h1 class="mt-5">DELANTEROS</h1>
         <hr class="mb-5">
 
 
         <div class="row text-center">
-            <div class="col-lg-4 ">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
                 </img>
 
                 <h2>Luis Rioja</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
                 </img>
 
                 <h2>Kike García</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
                 </img>
 
                 <h2>Xeber Alkain</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -301,29 +296,29 @@
 
 
 
-            <div class="col-lg-4 mt-5 mb-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
                 </img>
 
                 <h2>Abde Rebbach</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
                 </img>
 
                 <h2>Carlos Vicente</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4 mt-5">
+            <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
                 </img>
 
                 <h2>Unai Ropero</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -331,20 +326,21 @@
 
     </div>
 
-
-
     <script>
+
+        // ELIMINAR ENTRENADORES
 
         const eliminarEntrenadores = document.querySelector('.eliminarEntrenador');
 
         eliminarEntrenadores.addEventListener('click', eliminarEntrenador);
 
-        function eliminarEntrenador(e){
-            event.preventDefault();
-            const contenido = e.target.parentNode.parentNode;
+        function eliminarEntrenador(e) {
+            e.preventDefault();
+            const contenido = e.target.parentNode;
             contenido.remove();
         }
 
+        // ELIMINAR PORTEROS
 
         const eliminarPorteros = document.querySelectorAll('.eliminarPorteros');
 
@@ -352,11 +348,64 @@
             porteros.addEventListener('click', eliminarPortero);
         })
 
-        function eliminarPortero(e){
-            event.preventDefault();
-            const contenido = e.target.parentNode.parentNode;
+        function eliminarPortero(e) {
+            e.preventDefault();
+            const contenido = e.target.parentNode;
             contenido.remove();
         }
+
+        // ELIMINAR DEFENSAS
+
+
+        const eliminarDefensas = document.querySelectorAll('.eliminarDefensas')
+
+        eliminarDefensas.forEach(defensas => {
+            defensas.addEventListener('click', eliminarDefensa);
+        });
+
+        function eliminarDefensa(e) {
+            e.preventDefault();
+            const contenido = e.target.parentNode;
+            contenido.remove();
+        }
+
+
+        // ELIMINAR MEDIOCENTROS
+
+        const eliminarMediocentros = document.querySelectorAll('.eliminarMediocentros');
+
+        eliminarMediocentros.forEach(mediocentros => {
+            mediocentros.addEventListener('click', eliminarMediocentro);
+        })
+
+        function eliminarMediocentro(e) {
+            e.preventDefault();
+            const contenido = e.target.parentNode;
+            contenido.remove();
+        }
+
+
+        // ELIMINAR DELANTEROS
+
+
+        const eliminarDelanteros = document.querySelectorAll('.eliminarDelanteros');
+
+        eliminarDelanteros.forEach(delanteros => {
+            delanteros.addEventListener('click', eliminarDelantero);
+        })
+
+        function eliminarDelantero(e) {
+            e.preventDefault();
+            const contenido = e.target.parentNode;
+            contenido.remove();
+        }
+
+
+        // AÑADIR ENTRENDOR
+
+        
+
+        
 
     </script>
 
